[tool.poetry]
name = "habitracker"
version = "0.1.0"
description = "Visualizing Vices"
authors = ["Daethyra <109057945+Daethyra@users.noreply.github.com>"]
license = "GNU AGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
